# interp

./: .gitignore  README.md  pyproject.toml  setup.py
interp/: __init__.py
interp/interp1d/: __init__.py  interp1d.c  interp1d.pxd  interp1d.pyx  interp_1d.py
interp/interp2d/: interp2d.c  interp2d.pxd  interp2d.pyx  interp_2d.py
interp/interp3d/: interp3d.c  interp3d.pyx  interp_3d.py
interp2d/: __init__.py  interp2d.c  interp2d.pyx
interp3d/: interp3d.c  interp_3d.py
test/: test.py
