[build-system]
requires = ["setuptools>=61.0", "cython>=0.29.36","numpy>=1.24.3"]
build-backend = "setuptools.build_meta"
[project]
name = "interp"
version = "0.2.0"
authors = [
  { name="BigEmperor26", email="mickyin3@gmail.com" },
]
description = "Interp package faster than scipy"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Cython :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BigEmperor26/interp"
"Bug Tracker" = "https://github.com/BigEmperor26/interp/issues"